Added Username functionality and fixed date to be displayed as dd/mm/yyyy

--- a/login.html
+++ b/login.html
@@ -10,12 +10,14 @@
     <div class="login">
         <form>
             <h1>Login</h1>
-            <input type="text" placeholder="Username" required class="input-box"></br>
+            <input type="text" placeholder="Username" required class="input-box username"></br>
             <input type="password" placeholder="Password" required class="input-box"></br>
             <div class="remember-password"><label><input type="checkbox">Remember Password</label></div>
-            <button type="submit" class="submit" formaction="./home.html">Login</button>
+            <button type="submit" class="submit">Login</button>
             <p>Don't have an account?<a href="./signup.html">Sign Up</a> </p>
         </form>
     </div>
+
+    <script src="./login.js"></script>
 </body>
 </html>
